[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jttools"
version = "0.0.1"
dependencies = [
    'pandas',
    'scikit-learn',
    'scipy',
    'statsmodels',
    'tabulate',
    'icecream'
]

[tool.setuptools.packages.find]
where = ["src"]
#include = ["pkg*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[project.optional-dependencies]
plotting = [
    'plotly',
    'seaborn',
]